[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/Font/Macondo-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu/Scripts/EndGame.gd" type="Script" id=2]
[ext_resource path="res://Player/Sprite/player.png" type="Texture" id=3]


[sub_resource type="DynamicFont" id=1]
size = 11
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 11
font_data = ExtResource( 1 )

[node name="EndGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.160784, 0.290196, 0.8, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 8.0
margin_top = 6.0
margin_right = 322.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 1 )

[node name="PlayAgain" type="Button" parent="."]
margin_left = 86.0
margin_top = 127.0
margin_right = 235.0
margin_bottom = 147.0
text = "Play Again!"

[node name="Main" type="Button" parent="."]
margin_left = 87.0
margin_top = 154.0
margin_right = 237.0
margin_bottom = 174.0
text = "Back to Main Menu"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 155, 75 )
scale = Vector2( 1.40625, 1.40625 )
texture = ExtResource( 3 )
hframes = 13
vframes = 21
frame = 265

[node name="Label2" type="Label" parent="."]
margin_left = 90.0
margin_top = 3.0
margin_right = 141.0
margin_bottom = 18.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Game Over"

[connection signal="pressed" from="PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="Main" to="." method="_on_Main_pressed"]
